API/Examples-1/Route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: product-route
  namespace: default
spec:
  parentRefs:
    - name: nginx-gateway
      sectionName: http

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /nginx
      backendRefs:
        - name: svc-api
          port: 80
